--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.35",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.0",
-    "storybook": "^7.0.3",
-    "typescript": "^5.0.4"
+    "storybook": "^7.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.35",
+    "typescript": "5.0.4"
   }
 }
