--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
+    "babel-plugin-macros": "^3.1.0",
+    "font-awesome": "^4.7.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
