--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6007",
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
