--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "noImplicitAny":false,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
