--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-player": "^2.12.0",
     "sass": "^1.62.0",
     "storybook": "^7.0.4"
@@ -32,6 +33,7 @@
     "@storybook/testing-library": "^0.1.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
+    "@types/react-modal": "^3.16.0",
     "node-normalize-scss": "^8.1.2",
     "typescript": "5.0.4"
   }
